2005-07-06  Maciej Stachowiak  <mjs@apple.com>

        More ggc-4-only build fixage.
	
        * khtml/misc/hashtraits.h:

2005-07-06  Maciej Stachowiak  <mjs@apple.com>

        Fix additional gcc-4-only build breakage.

        * khtml/misc/pointerhash.h:
        (khtml::PointerHashConstIteratorAdapter::operator*):

2005-07-05  Maciej Stachowiak  <mjs@apple.com>

        Forgot to commit a file. Fix for build breakage.

        * ForwardingHeaders/misc/pointerhash.h: Added.

2005-07-05  Maciej Stachowiak  <mjs@apple.com>

	- remove stat dumping (accidentally left enabled in last patch)

	Unreviewed since this was a mistake in the last checkin.

        * khtml/misc/hashtable.h:

2005-07-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by hyatt.

        Numerous hash code improvements:

	- added HashMap and the required support for it in HashTable
	- convert to using deleted sentinels and double hashing instead of linear 
	probing and reinsert on delete
	- add support for traits so that empty and deleted values can be customized 
	per type
	- make insert return a pair of an iterator and a bool even at the API level
	- converted some code to use HashMap
	- added standard hash and equal functions for some types, plus case insensitive ones
	- lots of assorted code cleanup
	- pass hash functions as classes with two static functions instead of as functions

        * khtml/css/cssstyleselector.cpp:
        (khtml::CSSRuleSet::CSSRuleSet): Use HashMap instead of QPtrDict.
        (khtml::CSSRuleSet::~CSSRuleSet): ditto
        (khtml::CSSRuleSet::addToRuleSet): ditto
        (khtml::CSSRuleSet::addRule): ditto
        * khtml/css/cssstyleselector.h:
        (khtml::CSSRuleSet::getIDRules): ditto
        (khtml::CSSRuleSet::getClassRules): ditto
        (khtml::CSSRuleSet::getTagRules): ditto
        * khtml/editing/jsediting.cpp:
        (DOM::DocumentImpl::commandImp): ditto
        * khtml/misc/hashfunctions.h: Added. Standard hash functions.